RESOLVED FIXED98735
[Qt] WTR: Fix an assert triggered by EventSenderProxy::touchEnd
https://bugs.webkit.org/show_bug.cgi?id=98735
Summary [Qt] WTR: Fix an assert triggered by EventSenderProxy::touchEnd
Jocelyn Turcotte
Reported 2012-10-09 02:50:21 PDT
[Qt] WTR: Fix an assert triggered by EventSenderProxy::touchEnd
Attachments
Patch (1.93 KB, patch)
2012-10-09 02:55 PDT, Jocelyn Turcotte
kenneth: review+
Jocelyn Turcotte
Comment 1 2012-10-09 02:55:17 PDT
Jocelyn Turcotte
Comment 2 2012-10-10 03:23:41 PDT
Note You need to log in before you can comment on or make changes to this bug.