[Qt] WTR: Fix an assert triggered by EventSenderProxy::touchEnd https://bugs.webkit.org/show_bug.cgi?id=98735

Reviewed by Kenneth Rohde Christiansen.

ASSERT: "itemForTouchPointId.isEmpty()" in file qt5/qtdeclarative/src/quick/items/qquickwindow.cpp, line 1563
This assert is caused by QQuickWindow not registering our TouchPointReleased
since it expects QTouchEvent::touchPointStates() to be filled by the event's sender.

This patch calculates the touchPointStates like QQuickWindowPrivate::touchEventWithPoints does.

* WebKitTestRunner/qt/EventSenderProxyQt.cpp:
(WTR::EventSenderProxy::sendTouchEvent):

Canonical link: https://commits.webkit.org/116856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130878 268f45cc-cd09-0410-ab3c-d52691b4dbfc