Tools/WebKitTestRunner/qt/EventSenderProxyQt.cpp
@@ -418,7 +418,10 @@ void EventSenderProxy::sendTouchEvent(QEvent::Type type)
         QWindowSystemInterface::registerTouchDevice(device);
     }
 
-    QTouchEvent event(type, device, m_touchModifiers);
+    Qt::TouchPointStates eventStates;
+    for (int i = 0; i < m_touchPoints.count(); i++)
+        eventStates |= m_touchPoints[i].state();
+    QTouchEvent event(type, device, m_touchModifiers, eventStates);
     event.setTouchPoints(m_touchPoints);
     m_testController->mainWebView()->sendEvent(&event);
     QList<QTouchEvent::TouchPoint>::Iterator it = m_touchPoints.begin();
